--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -583,7 +583,7 @@
           </activation>
           <properties>
             <!-- Use a stable version instead of SNAPSHOT one -->
-            <argLine>-javaagent:dfc/generate-report.sh/ba-dua-agent-rt-0.2.0-all.jar -Doutput.file=target/badua.ser</argLine>
+            <argLine>-javaagent:dfc/ba-dua-agent-rt-0.2.0-all.jar -Doutput.file=bookkeeper-server/target/badua.ser</argLine>
           </properties>
           <!-- Needed for generate the report -->
           <build>
