--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -224,7 +224,21 @@
               </executions>
             </plugin>
           
-        
+        <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler-plugin.version}</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <compilerArgs>
+                        <!--<compilerArg>-Werror</compilerArg>-->
+                        <compilerArg>-Xlint:deprecation</compilerArg>
+                        <compilerArg>-Xlint:unchecked</compilerArg>
+                        <!-- https://issues.apache.org/jira/browse/MCOMPILER-205 -->
+                        <compilerArg>-Xpkginfo:always</compilerArg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
         <plugin>
             <groupId>org.pitest</groupId>
             <artifactId>pitest-maven</artifactId>
