--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -598,7 +598,7 @@
           <properties>
 		<ba-dua.version>0.2.0</ba-dua.version>
             <!-- Use a stable version instead of SNAPSHOT one -->
-            <argLine>-javaagent:bookkeeper-server/dfc/ba-dua-agent-rt-0.2.0-all.jar -Doutput.file=bookkeeper-server/target/badua.ser</argLine>
+            <argLine>-javaagent:..dfc/ba-dua-agent-rt-0.2.0-all.jar -Doutput.file=target/badua.ser</argLine>
           </properties>
           <!-- Needed for generate the report -->
           <build>
