--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -591,43 +591,30 @@
       </build>
     </profile>
     <profile>
-          <id>ba-dua-coverage</id>
-          <activation>
-            <activeByDefault>false</activeByDefault>
-          </activation>
-          <properties>
-		<ba-dua.version>0.2.0</ba-dua.version>
-            <!-- Use a stable version instead of SNAPSHOT one -->
-            <argLine>-javaagent:ba-dua-agent-rt-0.2.0-all.jar -Doutput.file=target/badua.ser
-		  -Xbootclasspath/p:ba-dua-agent-rt-0.2.0-all.jar</argLine>
-          </properties>
-          <!-- Needed for generate the report -->
-          <build>
-            <plugins>
-
-              <!-- Generate report in xml format -->
-              <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.5.0</version>
-                <executions>
-                  <execution>
-                    <id>Generate Ba-Dua report</id>
-                    <goals>
-                      <goal>exec</goal>
-                    </goals>
-                    <phase>verify</phase>
-                    <configuration>
-                      <workingDirectory>${project.basedir}</workingDirectory>
-                      <executable>dfc/generate-report.sh</executable>
-                    </configuration>
-                  </execution>
-                </executions>
-              </plugin>
-
-            </plugins>
-          </build>
-        </profile>
+      <id>ba-dua-coverage</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>${maven-surefire-plugin.version}</version>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>test</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <argLine>
+                -javaagent:ba-dua-agent-rt-0.2.0-all.jar
+                -Xbootclasspath/p:ba-dua-agent-rt-0.2.0-all.jar
+              </argLine>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
     <profile>
       <id>dev-debug</id>
       <build>
