--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -598,8 +598,7 @@
           <properties>
             <!-- Use a stable version istead of SNAPSHOT one -->
             <ba-dua.version>0.2.0</ba-dua.version>
-            <argLine>-javaagent:"dfc/ba-dua-agent-rt-0.2.0-all.jar" 
-		     -Doutput.file="target/badua.ser"</argLine>
+            <argLine>-javaagent:"dfc/ba-dua-agent-rt-0.2.0-all.jar"</argLine>
           </properties>
           <!-- Needed for generate the report -->
           <build>
