--- a/.github/workflows/sonar_scan.yml
+++ b/.github/workflows/sonar_scan.yml
@@ -50,7 +50,8 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
 
         
-
+      - name : mvn compile
+        run : mvn compile
       - name: Build and analyze
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
