--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -289,25 +289,7 @@
                 </avoidCallsTo>
             </configuration>
         </plugin>
-        <plugin>
-              <groupId>org.jacoco</groupId>
-              <artifactId>jacoco-maven-plugin</artifactId>
-              <version>0.8.7</version>
-              <executions>
-                <execution>
-                  <goals>
-                    <goal>prepare-agent</goal>
-                  </goals>
-                </execution>
-                <execution>
-                  <id>report</id>
-                  <phase>test</phase>
-                  <goals>
-                    <goal>report</goal>
-                  </goals>
-                </execution>
-              </executions>
-            </plugin>
+        
       <plugin>
         <!-- for mini-kdc -->
         <groupId>org.apache.felix</groupId>
@@ -548,7 +530,35 @@
     </plugins>
   </build>
   <profiles>
-   
+   <profile>
+            <id>jacoco</id>
+            <build>
+                <plugins>
+      <plugin>
+          
+
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.8.7</version>
+        
+            <executions>
+              <execution>
+                <goals>
+                  <goal>prepare-agent</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>report</id>
+                <phase>test</phase>
+                <goals>
+                  <goal>report</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+      </plugins>
+          </build>
+      </profile>
 
     <profile>
       <id>twitter-science-provider</id>
