--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -48,8 +48,9 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-          
-      - name : Build
+      - name : Report jacoco
+        run: mvn test -Pjacoco    
+      - name : Report ba-dua
         run: mvn test -Pba-dua-coverage
         
       
