--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -52,7 +52,7 @@ jobs:
         run: mvn clean install -Pjacoco
  
       - name : Report ba-dua
-        run: mvn clean install -Pba-dua-coverage
+        run: mvn test -Pba-dua-coverage
       
       - name: ba-dua coverage
 
