--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,4 +32,4 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       - name: Build and analyze
 
-        run: mvn -B verify 
+        run: mvn test 
