--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
     <module>bookkeeper-slogger</module>
     <module>tests</module>
     <module>native-io</module>
-    <module>testtools</module>-->
+    <module>testtools</module>
   </modules>
   <mailingLists>
     <mailingList>
