--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -51,6 +51,11 @@
       <version>${project.parent.version}</version>
     </dependency>
     <dependency>
+          <groupId>org.jacoco</groupId>
+          <artifactId>org.jacoco.core</artifactId>
+          <version>0.8.7</version>
+      </dependency>
+    <dependency>
       <groupId>org.apache.bookkeeper</groupId>
       <artifactId>bookkeeper-tools-framework</artifactId>
       <version>${project.parent.version}</version>
@@ -272,6 +277,22 @@
         <groupId>com.github.spotbugs</groupId>
         <artifactId>spotbugs-maven-plugin</artifactId>
       </plugin>
+       <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M5</version>
+            <configuration>
+              <argLine>${argLine}</argLine>
+              <properties>
+                <property>
+                  <name>listener</name>
+                  <value>org.apache.bookkeeper.common.testing.util.TimedOutTestsListener</value>
+                </property>
+              </properties>
+              <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+              <testFailureIgnore>true</testFailureIgnore>
+            </configuration>
+          </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
@@ -314,6 +335,33 @@
     </plugins>
   </build>
   <profiles>
+     <profile>
+                <id>jacoco</id>
+                <build>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.jacoco</groupId>
+                            <artifactId>jacoco-maven-plugin</artifactId>
+                            <version>0.8.7</version>
+                            <executions>
+                              <execution>
+                                <id>prepare-agent</id>
+                                <goals>
+                                  <goal>prepare-agent</goal>
+                                </goals>
+                              </execution>
+                              <execution>
+                                <id>report</id>
+                                <phase>test</phase>
+                                <goals>
+                                  <goal>report</goal>
+                                </goals>
+                              </execution>
+                            </executions>
+                          </plugin>
+          </plugins>
+              </build>
+          </profile>
     <profile>
       <id>vertx-http-server</id>
       <dependencies>
