--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,10 @@ jobs:
 
         run: mvn test -Pjacoco
         
+      - name: Build and analyze
+
+        run: mvn test -Ppit-test
+        
       - name: Save Jacoco  Report
         uses: actions/upload-artifact@v3
  
@@ -41,4 +45,5 @@ jobs:
           name: Jacoco and Pit Reports
           path: |
             bookkeeper-server/target/site/jacoco
+            bookkeeper-server/target/pit-report
 
