--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -388,7 +388,30 @@
     </plugins>
   </build>
   <profiles>
-     
+     <profile>
+            <id>ba-dua-coverage</id>
+            <build>
+              <plugins>
+                <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-surefire-plugin</artifactId>
+                  <version>${maven-surefire-plugin.version}</version>
+                  <executions>
+                    <execution>
+                      <goals>
+                        <goal>test</goal>
+                      </goals>
+                    </execution>
+                  </executions>
+                  <configuration>
+                    <argLine>
+                      -javaagent:"ba-dua-agent-rt-0.6.0-all.jar"
+                    </argLine>
+                  </configuration>
+                </plugin>
+              </plugins>
+            </build>
+          </profile>
      <profile>
                 <id>jacoco</id>
                 <build>
