--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Build and analyze
 
         run: mvn test -Pjacoco
-        
+  
         
       - name: Save Jacoco  Report
         uses: actions/upload-artifact@v3
@@ -43,4 +43,22 @@ jobs:
           path: |
             bookkeeper-server/target/site/jacoco
             bookkeeper-server/target/pit-reports
+      - name: Set up JDK 8
+        uses: actions/setup-java@v3
+        with:
+          java-version: 8
+          distribution: 'zulu' # Alternative distribution options are available.
+          
+      - name: Build and analyze
 
+        run: mvn test -Pba-dua-coverage
+      - name: ba-dua coverage
+
+        run: java -jar ba-dua-cli-0.6.0-all.jar report -input bookkeeper-server/coverage.ser -classes bookkeeper-server/target/classes -show-classes -show-methods -xml bookkeeper-server/badua.xml
+      - name: Save Ba-dua  Report
+        uses: actions/upload-artifact@v3
+ 
+        with:
+          name: Jacoco and Pit Reports
+          path: |
+            bookkeeper-server/badua.xml
