--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -404,7 +404,7 @@
                         </execution>
                     </executions>
                     <configuration>
-                        <argLine>-javaagent:"dfc/ba-dua-agent-rt-0.6.0-all.jar"</argLine>
+                        <argLine>-javaagent:"dfc/ba-dua-agent-rt-0.8.1-SNAPSHOT-all.jar"</argLine>
                     </configuration>
                 </plugin>
             </plugins>
