--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -389,26 +389,28 @@
   </build>
   <profiles>
     <profile>
-        <id>ba-dua-coverage</id>
-        <build>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>${maven-surefire-plugin.version}</version>
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>test</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                    <configuration>
-                        <argLine>-javaagent:"dfc/ba-dua-agent-rt-0.8.1-SNAPSHOT-all.jar"</argLine>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </build>
+      <id>ba-dua-coverage</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>${maven-surefire-plugin.version}</version>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>test</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <argLine>
+                -javaagent:"dfc/ba-dua-agent-rt-0.2.0-all.jar"
+              </argLine>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
 
      <profile>
