--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,10 +51,7 @@ jobs:
           
       - name: Build and analyze
 
-        run: |
-          chmod 666 dfc/ba-dua-agent-rt-0.6.0.jar
-          ls -l
-          mvn test -Pba-dua-coverage
+        run: ls
       - name: ba-dua report
 
         run: java -jar jar/ba-dua-cli-0.6.0-all.jar report -input bookkeeper-server/coverage.ser -classes bookkeeper-server/target/classes -show-classes -show-methods -xml bookkeeper-server/badua.xml
