--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,19 +30,19 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-     # - name: Build and analyze
+      - name: Build and analyze
 
-     #   run: mvn test -Pjacoco
+        run: mvn test -Pjacoco
   
         
-     # - name: Save Jacoco  Report
-     #   uses: actions/upload-artifact@v3
+      - name: Save Jacoco  Report
+        uses: actions/upload-artifact@v3
  
-     #   with:
-      #    name: Jacoco and Pit Reports
-      #    path: |
-       #     bookkeeper-server/target/site/jacoco
-       #     bookkeeper-server/target/pit-reports
+        with:
+          name: Jacoco and Pit Reports
+          path: |
+            bookkeeper-server/target/site/jacoco
+            bookkeeper-server/target/pit-reports
       - name: Set up JDK 8
         uses: actions/setup-java@v3
         with:
@@ -60,6 +60,6 @@ jobs:
         uses: actions/upload-artifact@v3
  
         with:
-          name: Jacoco and Pit Reports
+          name: ba-dua Report
           path: |
             bookkeeper-server/badua.xml
