--- a/.github/workflows/Sonar-Scan.yml
+++ b/.github/workflows/Sonar-Scan.yml
@@ -50,7 +50,7 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
           
           
-      - name: Sonar Cloud Scan
+      - name: Build and Scan
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
