--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -621,6 +621,28 @@
               </argLine>
             </configuration>
           </plugin>
+		
+
+          <!-- Generate report in xml format -->
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>1.5.0</version>
+            <executions>
+              <execution>
+                <id>Generate Ba-Dua report</id>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+                <phase>verify</phase>
+                <configuration>
+                  <workingDirectory>${project.basedir}</workingDirectory>
+                  <executable>dfc/generate-report.sh</executable>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+
         </plugins>
       </build>
     </profile>
