--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,10 +30,12 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-      - name: Build and analyze
+      - name: jacoco-report
 
         run: mvn test -Pjacoco
-  
+      - name: pit-report
+
+        run: mvn test -Ppit-test
         
       - name: Save Jacoco  Report
         uses: actions/upload-artifact@v3
