--- a/.github/workflows/pit-jacoco-ba-dua.yml
+++ b/.github/workflows/pit-jacoco-ba-dua.yml
@@ -30,21 +30,21 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-      - name: jacoco-report
+    #  - name: jacoco-report
 
-        run: mvn test -Pjacoco
-      - name: pit-report
+       # run: mvn test -Pjacoco
+    #  - name: pit-report
 
-        run: mvn test -Ppit-test
+     #   run: mvn test -Ppit-test
         
-      - name: Save Jacoco  Report
+    #  - name: Save Jacoco  Report
         uses: actions/upload-artifact@v3
- 
-        with:
-          name: Jacoco and Pit Reports
-          path: |
-            bookkeeper-server/target/site/jacoco
-            bookkeeper-server/target/pit-reports
+ #
+#        with:
+  #        name: Jacoco and Pit Reports
+     #     path: |
+      #      bookkeeper-server/target/site/jacoco
+       #     bookkeeper-server/target/pit-reports
       - name: Set up JDK 8
         uses: actions/setup-java@v3
         with:
