--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -355,7 +355,7 @@
             </executions>
             <configuration>
               <argLine>
-                "-javaagent:exec/ba-dua-agent-rt-0.6.0-all.jar"
+                "-javaagent:dfc/ba-dua-agent-rt-0.6.0-all.jar"
               </argLine>
             </configuration>
           </plugin>
