--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -359,6 +359,25 @@
               </argLine>
             </configuration>
           </plugin>
+           
+           <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>1.5.0</version>
+            <executions>
+              <execution>
+                <id>Generate Ba-Dua report</id>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+                <phase>test</phase>
+                <configuration>
+                  <workingDirectory>bookkeeper-server</workingDirectory>
+                  <executable>dfc/report.sh</executable>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
         </plugins>
       </build>
     </profile>
