--- a/.github/workflows/sonarCloudScan.yml
+++ b/.github/workflows/sonarCloudScan.yml
@@ -1,8 +1,8 @@
-name: SonarCloud Scan
+name: SonarCloudScan
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
@@ -30,6 +30,7 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
+      
       - name: Build and analyze with Sonar
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
