--- a/.github/workflows/pit-jacoco-ba-dua.yml
+++ b/.github/workflows/pit-jacoco-ba-dua.yml
@@ -54,7 +54,7 @@ jobs:
         uses: actions/upload-artifact@v3
  
         with:
-          name: ba-dua Report
+          name: Jacoco, PIT and ba-dua Reports
           path: |
             bookkeeper-server/target/badua.xml
             bookkeeper-server/target/site/jacoco
